--- a/app_dictionnary_si/MainWindow.xaml
+++ b/app_dictionnary_si/MainWindow.xaml
@@ -93,7 +93,7 @@
 			<TextBlock x:Name="LblTotal" Text="Total estimé: 0" FontStyle="Italic"
                        Foreground="Gray" Margin="0,5,0,15" HorizontalAlignment="Center"/>
 			<Button x:Name="btnGenerer" Content="Générer le dictionnaire" Height="40" FontSize="14"
-                    Background="#4CAF50" Foreground="White" FontWeight="Bold" Cursor="Hand" Click="btnGenerer_Click"/>
+                    Background="#4CAF50" Foreground="White" FontWeight="Bold" Cursor="Hand" Click="btnGenerer_Click" IsEnabled="False"/>
 		</StackPanel>
 	</Grid>
 </Window>
